--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@
     display: inline-block;
 }
 
+.buttons-container {
+    display: inline-block;
+    padding: 8px;
+    width: 100%;
+}
+
 #black {
     background-color: #000000;
     width: 40px;
