--- a/style.css
+++ b/style.css
@@ -1,11 +1,27 @@
-.body {
+* {
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  font-family: Courier New, Courier, monospace;
+}
+
+body {
   text-align: center;
+  margin-top: 5%;
+  background-color: rgb(191, 191, 191);
+  background-image: url('imgs/w-qjCHPZbeXCQ-unsplash.jpeg');
+}
+
+h1 {
+  padding: 30px;
 }
 
 .color {
   border: 1px black solid;
+  border-radius: 20px;
   width: 40px;
   height: 40px;
+  margin: 5px;
   display: inline-block;
 }
 
@@ -19,7 +35,8 @@
 
 .buttons-container {
   display: inline-block;
-  padding: 8px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   width: 100%;
 }
 
